locale_supports_12_hour_format() can read uninitialized value
src/libedataserver/e-time-utils.c:locale_supports_12_hour_format() can do:
gchar s[40];
e_utf8_strftime (s, sizeof (s), "%p", &tmp_tm);
//in e_utf8_strftime() is executed
locale_fmt = g_locale_from_utf8 (fmt, -1, NULL, &sz, NULL);
if (!locale_fmt)
return 0; // *s* is not set
// back in locale_supports_12_hour_format()
if (!s[0]) {
The last line reads uninitialized value.