I#418 - locale_supports_12_hour_format() can read uninitialized value

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/418